test/error/parser/struct-field-after-method.dsk
let S = struct
    foo: () -> void
        return
    end
    bar: int
end
